[gd_scene load_steps=14 format=3 uid="uid://cq1hu5yrjudl8"]

[ext_resource type="Script" uid="uid://0e2mf32b5dro" path="res://Scripts/Addons/exploration_areas.gd" id="1_575pr"]
[ext_resource type="Texture2D" uid="uid://u2q2g53h6ujm" path="res://Artwork/Sprites/Icon/Software_Speech_Bubble_Three_Dots_Dialogue.png" id="1_bfnfc"]
[ext_resource type="FontFile" uid="uid://cfgia102u0cdr" path="res://Resources/8_bit_hud/8-bit-hud.ttf" id="3_wem1s"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_2gvrw"]
size = Vector2(78, 70)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_wem1s"]
bg_color = Color(0, 0, 0, 0.478431)
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10
shadow_size = 7

[sub_resource type="Animation" id="Animation_v1l0d"]
resource_name = "Close"
length = 0.7
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.7),
"transitions": PackedFloat32Array(7.46427, 3.4822),
"update": 0,
"values": [Vector2(1, 1), Vector2(0, 0)]
}

[sub_resource type="Animation" id="Animation_575pr"]
resource_name = "Open"
length = 0.7
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.7),
"transitions": PackedFloat32Array(7.46427, 3.36359),
"update": 0,
"values": [Vector2(0, 0), Vector2(1, 1)]
}

[sub_resource type="Animation" id="Animation_wem1s"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(1, 1)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_wem1s"]
_data = {
&"Close": SubResource("Animation_v1l0d"),
&"Open": SubResource("Animation_575pr"),
&"RESET": SubResource("Animation_wem1s")
}

[sub_resource type="Animation" id="Animation_vsyvj"]
resource_name = "Close"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Text:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.7),
"transitions": PackedFloat32Array(8.87655, 8.87655),
"update": 0,
"values": [Vector2(1, 1), Vector2(1e-05, 1e-05)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("ColorRect:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.7),
"transitions": PackedFloat32Array(5.65686, 5.65686),
"update": 0,
"values": [Vector2(1, 1), Vector2(1e-05, 1e-05)]
}

[sub_resource type="Animation" id="Animation_05720"]
resource_name = "Open"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Text:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.7),
"transitions": PackedFloat32Array(8.87655, 8.87655),
"update": 0,
"values": [Vector2(1e-05, 1e-05), Vector2(1, 1)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("ColorRect:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.7),
"transitions": PackedFloat32Array(5.27803, 5.27803),
"update": 0,
"values": [Vector2(1e-05, 1e-05), Vector2(1, 1)]
}

[sub_resource type="Animation" id="Animation_4v613"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Text:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(1e-05, 1e-05)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("ColorRect:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(1e-05, 1e-05)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_4v613"]
_data = {
&"Close": SubResource("Animation_vsyvj"),
&"Open": SubResource("Animation_05720"),
&"RESET": SubResource("Animation_4v613")
}

[node name="ExplorationAreas" type="Area2D"]
collision_mask = 16
script = ExtResource("1_575pr")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("RectangleShape2D_2gvrw")

[node name="Sprite" type="Sprite2D" parent="."]
texture = ExtResource("1_bfnfc")

[node name="ColorRect" type="Panel" parent="."]
offset_left = -61.0
offset_top = -57.0
offset_right = 61.0
offset_bottom = -11.0
scale = Vector2(1e-05, 1e-05)
pivot_offset = Vector2(61, 20)
theme_override_styles/panel = SubResource("StyleBoxFlat_wem1s")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_wem1s")
}

[node name="Text" type="RichTextLabel" parent="."]
offset_left = -65.0
offset_top = -63.0
offset_right = 65.0
offset_bottom = -7.0
scale = Vector2(1e-05, 1e-05)
pivot_offset = Vector2(65, 28)
theme_override_fonts/normal_font = ExtResource("3_wem1s")
theme_override_font_sizes/normal_font_size = 5
text = "My birthday is next week, I hope that by then, everything is solved.."
fit_content = true
horizontal_alignment = 1
vertical_alignment = 1

[node name="TextAnim" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_4v613")
}

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="body_exited" from="." to="." method="_on_body_exited"]
